--- a/apps/display/styles/index.module.scss
+++ b/apps/display/styles/index.module.scss
@@ -8,6 +8,7 @@
 .topbar {
   height: 5vh;
   width: 100vw;
+  background: aquamarine;
 }
 
 .lyricsArea {
@@ -17,7 +18,7 @@
   margin-left: 10%;
   line-height: 2.5em;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .shelf {
@@ -45,7 +46,6 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  border: solid 3px transparent;
 
   .coverArt {
     height: 6vh;
@@ -55,9 +55,9 @@
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px 0px 5px 0px rgb(133, 133, 133);
-    -moz-box-shadow: 0px 0px 5px 0px rgb(133, 133, 133);
-    box-shadow: 0px 0px 5px 0px rgb(133, 133, 133);
+    -webkit-box-shadow: 0 0 5px 0 rgb(133, 133, 133);
+    -moz-box-shadow: 0 0 5px 0 rgb(133, 133, 133);
+    box-shadow: 0 0 5px 0 rgb(133, 133, 133);
   }
 
   .textarea {
