--- a/apps/display/styles/index.module.scss
+++ b/apps/display/styles/index.module.scss
@@ -8,7 +8,51 @@
 .topbar {
   height: 5vh;
   width: 100vw;
-  background: aquamarine;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  .menuIcon {
+    height: 5vh;
+    width: 5vh;
+    object-fit: cover;
+    margin-right: 5vw;
+    z-index: 999;
+  }
+}
+
+.menuIsland {
+  position: absolute;
+  width: 70vw;
+  margin-right: -70vw;
+  top: 0;
+  transition: right 0.15s ease-in-out;
+  margin-left: auto;
+  background: #f8f8f8;
+  border-radius: 10px;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+
+  .menuContent {
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: left;
+    color: #313131;
+    h1 {
+      color: #313131;
+      font-size: 1.6em;
+    }
+    h2 {
+        font-size: 0.8em;
+    }
+    li {
+      padding-top: 0.5em;
+      font-size: 1.1em;
+      margin-left: 2em;
+      padding-bottom: 0.5em;
+    }
+  }
 }
 
 .lyricsArea {
@@ -36,7 +80,7 @@
   position: absolute;
   height: 8vh;
   width: 88vw;
-  background-color: #f6f6f6;
+  background-color: #f8f8f8;
   bottom: 15vh;
   left: 0;
   right: 0;
@@ -55,8 +99,6 @@
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0 0 5px 0 rgb(133, 133, 133);
-    -moz-box-shadow: 0 0 5px 0 rgb(133, 133, 133);
     box-shadow: 0 0 5px 0 rgb(133, 133, 133);
   }
 
