--- a/apps/display/styles/globals.css
+++ b/apps/display/styles/globals.css
@@ -2,9 +2,10 @@
     margin: 0;
     padding: 0;
     font-size: 1em;
+    user-select: none;
 }
 
-body{
+body {
     background-color: #262626;
 }
 
