--- a/apps/display/components/Player.module.scss
+++ b/apps/display/components/Player.module.scss
@@ -67,9 +67,9 @@
   }
 
   .subtitle {
-    width: 90%;
+    width: 60vw;
     margin-top: 4%;
-    font-size: 0.7em;
+    font-size: 0.5em;
     font-family: "SF Pro Regular", sans-serif;
     overflow-x: hidden;
     white-space: nowrap;
