--- a/apps/display/components/Icon.module.scss
+++ b/apps/display/components/Icon.module.scss
@@ -9,10 +9,11 @@
     background-repeat: no-repeat;
   }
   .caption {
-    margin-top: 0.5em;
+    margin-top: 0.7em;
     font-size: 0.7em;
     color: #282828;
     font-family: "SF Pro Medium", sans-serif;
     text-align: center;
+    width: 80%;
   }
 }
