--- a/apps/display/components/Player.module.scss
+++ b/apps/display/components/Player.module.scss
@@ -42,7 +42,7 @@
     aspect-ratio: 1 / 1;
     border-radius: 3px;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     box-shadow: 0 0 15px 0 rgb(133, 133, 133);
   }
@@ -69,7 +69,7 @@
   .subtitle {
     width: 60vw;
     margin-top: 4%;
-    font-size: 0.5em;
+    font-size: 0.8em;
     font-family: "SF Pro Regular", sans-serif;
     overflow-x: hidden;
     white-space: nowrap;
@@ -78,6 +78,7 @@
 
   .line {
     margin: 2em;
+    width: 80%;
   }
 
   .icons {
