--- a/packages/display/src/components/Island.module.scss
+++ b/packages/display/src/components/Island.module.scss
@@ -7,6 +7,7 @@
     border-radius: 0.4em;
     padding: 0.5em;
     box-shadow: 0 0 1em 0.5em rgba(255, 255, 255, 0.05);
+    overflow: hidden; /* This ensures content stays inside the island */
 }
 
 .picture {
@@ -20,10 +21,13 @@
 }
 
 .text {
-    margin-left: 0.85em;
+    margin-left: 0.75em;
     display: flex;
     flex-direction: column;
     line-height: 1.3;
+    flex-grow: 1;
+    min-width: 0;
+    overflow: hidden;
     :first-child {
         font-weight: 500;
         color: #4f4f4f;
@@ -31,5 +35,10 @@
     :last-child {
         font-size: 0.85em;
         color: #a1a1a1;
+    }
+    * {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
