feat(dragger): add dragger

--- a/packages/display/src/components/Lyrics.module.scss
+++ b/packages/display/src/components/Lyrics.module.scss
@@ -1,7 +1,7 @@
 .lyrics {
   width: 90%;
   height: 100%;
-  color: ghostwhite;
+  color: #f4f4f5;
   font-size: 2.5cqh;
   display: flex;
   flex-direction: column;
