--- a/packages/display/src/app/page.module.scss
+++ b/packages/display/src/app/page.module.scss
@@ -11,4 +11,19 @@
 .island {
   display: grid;
   place-items: center;
+  transition: margin-top 300ms;
+}
+
+.drawer {
+  width: 98%;
+  background: #f4f4f5;
+  display: flex;
+  flex-direction: column;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+  margin: auto;
+  position: fixed;
+  bottom: 1em;
+  left: 0;
+  right: 0;
 }
