--- a/packages/display/src/components/Island.module.scss
+++ b/packages/display/src/components/Island.module.scss
@@ -3,7 +3,7 @@
     width: 95%;
     display: flex;
     align-items: center;
-    background: whitesmoke;
+    background: #f4f4f5;
     border-radius: 0.4em;
     padding: 0.5em;
     box-shadow: 0 0 1em 0.5em rgba(255, 255, 255, 0.05);
